--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
         <div class="results">
           <p>Title: <span>{{ title }}</span></p>
           <p>DOI: <span>{{ doi }}</span></p>
-          <p>The Open Metric value for this article is: <span>{{ open_metric_score }}</span></p>
+          <p>Open Metric Score: <span>{{ open_metric_score }}</span></p>
         </div>
       {% endif %}
     </div>
