--- a/templates/errors.html
+++ b/templates/errors.html
@@ -1,10 +1,101 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Error</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>The Open Metric</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <style>
+      body {
+        background-color: #F3F7F9;
+        color: #3E4959;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+      }
+      h1 {
+        font-size: 36px;
+        font-weight: 700;
+        text-align: center;
+        margin-top: 100px;
+        margin-bottom: 50px;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+      }
+      label {
+        font-size: 24px;
+        font-weight: 700;
+        margin-top: 20px;
+      }
+      input[type="text"] {
+        font-size: 18px;
+        padding: 12px;
+        border: none;
+        border-radius: 10px;
+        margin-top: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        width: 400px;
+      }
+      input[type="submit"] {
+        font-size: 24px;
+        font-weight: 700;
+        padding: 12px 30px;
+        border: none;
+        border-radius: 10px;
+        margin-top: 20px;
+        background-color: #BFBFBF;
+        color: #fff;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+      }
+      input[type="submit"]:hover {
+        background-color: #3E4959;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+      }
+      .results {
+        margin-top: 50px;
+        text-align: center;
+      }
+      .results p {
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 20px;
+      }
+      .results p span {
+        font-weight: 400;
+      }
+    </style>
   </head>
   <body>
-    <h1>Error</h1>
-    <p>Sorry, an error occurred.</p>
+    {% include 'navbar.html' %}
+    <div>
+      <h1>Oops! Something went wrong.</h1>
+      <div class="results">
+        <p>Sorry, we couldn't find the page you were looking for.</p>
+        <p>Here are some helpful links instead:</p>
+        <p><a href="/">Home</a></p>
+        <p><a href="/about">About</a></p>
+      </div>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
