--- a/templates/index.html
+++ b/templates/index.html
@@ -61,18 +61,79 @@
         background-color: #3E4959;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
       }
-      .results {
-        margin-top: 50px;
-        text-align: center;
-      }
-      .results p {
-        font-size: 24px;
-        font-weight: 700;
-        margin-bottom: 20px;
-      }
-      .results p span {
-        font-weight: 400;
-      }
+      .glass-box {
+  background: rgba(195, 195, 195, 0.38);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.6px);
+  -webkit-backdrop-filter: blur(8.6px);
+  border: 1px solid rgba(195, 195, 195, 0.43);
+  display: inline-block;
+  padding: 10px;
+  width: 800px;
+  height: 300px;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  /* media query for smaller screens */
+  @media only screen and (max-width: 768px) {
+    width: 90%;
+    height: auto;
+    padding: 20px;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.results {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 100px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+
+  /* media query for smaller screens */
+  @media only screen and (max-width: 768px) {
+    width: 80%;
+    height: auto;
+    margin-top: 10px;
+  }
+}
+
+.number {
+  font-size: 32px;
+  font-weight: bold;
+  color: #333;
+  padding-bottom: 5px;
+}
+
+.text {
+  font-size: 12px;
+  color: #666;
+}
+
+
+
+
+      
     </style>
   </head>
   <body>
@@ -80,16 +141,29 @@
     <div>
       <h1>The Open Metric</h1>
       <form action="/" method="POST">
-        <label for="doi">Enter the DOI of the required paper:</label>
+        <label for="doi">Enter the DOI of the paper:</label>
         <input type="text" id="doi" name="doi">
         <input type="submit" value="Submit">
       </form>
       {% if open_metric_score %}
+      <div class="glass-box">
         <div class="results">
-          <p>Title: <span>{{ title }}</span></p>
-          <p>DOI: <span>{{ doi }}</span></p>
-          <p>The Open Metric value for this article is: <span>{{ open_metric_score }}</span></p>
+          <p><span style="font-weight:bold;">TITLE:</span> <span>{{ title }}</span></p>
+    <p><span style="font-weight:bold;">DOI:</span> <span>{{ doi }}</span></p>
+      
+          <div class="box">
+            <span class="number">{{ open_metric_score }}</span>
+            <span class="text">Open Metric score</span>
+          </div>
         </div>
+      </div>
+      
+      
+      
+      
+      
+      
+        
       {% endif %}
     </div>
 
