--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,4 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>The Open Metric</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <style>
-      body {
-        background-color: #F3F7F9;
-        color: #3E4959;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 16px;
-        line-height: 1.5;
-      }
-      h1 {
-        font-size: 36px;
-        font-weight: 700;
-        text-align: center;
-        margin-top: 100px;
-        margin-bottom: 50px;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 50px;
-      }
-      label {
-        font-size: 24px;
-        font-weight: 700;
-        margin-top: 20px;
-      }
-      input[type="text"] {
-        font-size: 18px;
-        padding: 12px;
-        border: none;
-        border-radius: 10px;
-        margin-top: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        width: 400px;
-      }
-      input[type="submit"] {
-        font-size: 24px;
-        font-weight: 700;
-        padding: 12px 30px;
-        border: none;
-        border-radius: 10px;
-        margin-top: 20px;
-        background-color: #BFBFBF;
-        color: #fff;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-      }
-      input[type="submit"]:hover {
-        background-color: #3E4959;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-      }
-      .glass-box {
+.glass-box {
   background: rgba(195, 195, 195, 0.38);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -133,7 +70,7 @@
 
 
 
-      
+
     </style>
   </head>
   <body>
@@ -148,18 +85,22 @@
       {% if open_metric_score %}
       <div class="glass-box">
         <div class="results">
-          <p>Title: <span>{{ title }}</span></p>
-          <p>DOI: <span>{{ doi }}</span></p>
-          <p>The Open Metric value for this article is: <span>{{ open_metric_score }}</span></p>
+          <p><span style="font-weight:bold;">TITLE:</span> <span>{{ title }}</span></p>
+    <p><span style="font-weight:bold;">DOI:</span> <span>{{ doi }}</span></p>
+
+          <div class="box">
+            <span class="number">{{ open_metric_score }}</span>
+            <span class="text">Open Metric score</span>
+          </div>
         </div>
       </div>
-      
-      
-      
-      
-      
-      
-        
+
+
+
+
+
+
+
       {% endif %}
     </div>
 
