--- a/templates/about.html
+++ b/templates/about.html
@@ -122,6 +122,8 @@
 <h4>REFERENCES </h4>
 <ul>
 <li>Altmetric. (2015, July 9). Free tools. Altmetric. https://www.altmetric.com/products/free-tools/</li>
+  
+<li> OpenCitations. For retrieving information about bibliographic and citation data. https://opencitations.net/tools </li>
 
 <li>Buehling, K., Geissler, M., &amp; Strecker, D. (2022). Free access to scientific literature and its influence on the publishing activity in developing countries: The effect of Sci-Hub in the field of mathematics. Journal of the Association for Information Science and Technology, 73(9), 1336&ndash;1355. https://doi.org/10.1002/asi.24636</li>
 
